onlyargs_derive/compile_tests/required_option.stderr
error: #[required] can only be used on `Vec<T>`
 --> compile_tests/required_option.rs:4:22
  |
4 |     required_option: Option<String>,
  |                      ^^^^^^
